# RefineBox

./: .gitignore  .gitmodules  LICENSE  README.md  install.sh  setup.cfg
checkpoints/rb_conditional_detr_r101_12ep/: model_final.pth
checkpoints/rb_conditional_detr_r50_12ep/: model_final.pth
checkpoints/rb_dab_detr_r101_12ep/: model_final.pth
checkpoints/rb_dab_detr_r50_12ep/: model_final.pth
checkpoints/rb_dab_detr_r50_12ep_lvis/: model_final.pth
checkpoints/rb_dab_detr_r50_12ep_lvis_fedloss/: model_final.pth
checkpoints/rb_dab_detr_swin_t_in1k_12ep/: model_final.pth
checkpoints/rb_detr_r101_12ep/: model_final.pth
checkpoints/rb_detr_r50_12ep/: model_final.pth
checkpoints/rb_dn_detr_r50_12ep/: model_final.pth
checkpoints/rb_group_detr_r50_12ep_11-groups/: model_final.pth
configs/common/data/: coco_detr.py  lvis_detr.py
projects/rb_conditional_detr/configs/: rb_conditional_detr_r101_12ep.py  rb_conditional_detr_r50_12ep.py
projects/rb_conditional_detr/modeling/: __init__.py  rb_conditional_detr.py
projects/rb_dab_detr/: converter.py
projects/rb_dab_detr/configs/: dab_detr_r50_50ep_lvis_v1.py  dab_detr_r50_50ep_lvis_v1_fedloss.py  rb_dab_detr_r101_12ep.py  rb_dab_detr_r50_12ep.py  rb_dab_detr_r50_12ep_lvis.py  rb_dab_detr_r50_12ep_lvis_fedloss.py  rb_dab_detr_swin_t_in1k_12ep.py
projects/rb_dab_detr/modeling/: __init__.py  rb_dab_detr.py
projects/rb_detr/configs/: rb_detr_r101_12ep.py  rb_detr_r50_12ep.py
refinebox/engine/: defaults.py
refinebox/utils/: utils.py
tools/: get_lvis_cat_info.py  train_net.py
(+23 files in other folders)
