[metadata]
name = refinebox
version = 0.1.0
author = Yiqun Chen
description = Implementation of 'Enhancing Your Trained DETRs with Box Refinement', see https://arxiv.org/abs/2307.11828
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
license = BSD 3-Clause License
classifiers =
    Framework :: PyTorch
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    fairscale
    lvis
    attrmap
    cython
    numpy<=1.23
    tqdm
    opencv-python
    scipy
    scikit-image
    scikit-learn
    pyyaml
    torch-tb-profiler
    pycocotools
    pytest
    tidecv

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    test*
    ckpts*
    logs*